ajout fonctions chrono

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
     <!-- GAME -->
     <div class="game">
         <div class="actions">
-            <div class="btn-2 chrono"></div>
+            <div class="btn-2 chrono">
+                 <p><span class="minutes">00</span>:<span class="seconds">00</span></p>
+            </div>
             <a class="btn-2 return-home"><img src="./images/icon-home.svg" alt="" /></a>
             <a class="btn-2 retry"><img src="./images/icon-retry.svg" alt="" /></a>
         </div>
